--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 body {
- background-color: rgb(119, 175, 175);
+ background-color: #d0f3e1;
  justify-content: center;
  justify-items: center;
  text-align: justify;
