--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 body {
- background-color: #d0f3e1;
+ background-color: rgb(175, 238, 238);
  justify-content: center;
  justify-items: center;
  text-align: justify;
